# pyroot-template

./: .pre-commit-config.yaml  README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .flake8  .pre-commit-config.yaml  LICENSE  environment.yml  pyproject.toml  setup.sh
{{cookiecutter.project_slug}}/notebooks/: {{cookiecutter.project_slug}}.ipynb
{{cookiecutter.project_slug}}/tests/: test_version.py
