[project]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
authors = [
    {name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}}"},
]
description = "{{cookiecutter.project_short_description}}"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.isort]
profile = "black"

[build-system]
requires = ["setuptools >= 67.3.1"]
build-backend = "setuptools.build_meta"
